--- a/src/modules/s3/web-component/index.html
+++ b/src/modules/s3/web-component/index.html
@@ -1,1 +1,9 @@
-Hola mundo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Hello World</title>
+</head>
+<body>
+    <p>Hello World!!!</p>
+</body>
+</html>
